--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <head>
 <title>
 hello world
+  <body>
+    <h1>hello every one</h1>
+    <h2>hello hello</h2>
+      
+  </body>
+  
 </title>
 </head>
 </html>
